--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon src/index.js",
-    "swagger": "node ./swagger.js"
+    "swagger": "node ./autoGen.swagger.js"
   },
   "keywords": [],
   "author": "",
